--- a/ereuse_devicehub/templates/inventory/device_create.html
+++ b/ereuse_devicehub/templates/inventory/device_create.html
@@ -36,6 +36,14 @@
                       <label for="name" class="form-label">Type *</label>
                       <select id="type" class="form-control" name="type" required="">
                         <option value="">Select one Type</option>
+                        <optgroup label="Computer">
+                          <option value="Laptop"
+                          {% if form.type.data == 'Laptop' %} selected="selected"{% endif %}>Laptop</option>
+                          <option value="Desktop"
+                          {% if form.type.data == 'Desktop' %} selected="selected"{% endif %}>Desktop</option>
+                          <option value="Server"
+                          {% if form.type.data == 'Server' %} selected="selected"{% endif %}>Server</option>
+                        </optgroup>
                         <optgroup label="Monitor">
                           <option value="ComputerMonitor"
                           {% if form.type.data == 'Monitor' %} selected="selected"{% endif %}>Computer Monitor</option>
