add number of devices to be created

--- a/ereuse_devicehub/templates/inventory/device_create.html
+++ b/ereuse_devicehub/templates/inventory/device_create.html
@@ -90,7 +90,7 @@
                       {% endif %}
                     </div>
 
-                    <div class="form-group mb-2">
+                    <div class="form-group mb-2" id="Phid">
                       <label for="label" class="form-label">{{ form.phid.label }}</label>
                       {{ form.phid(class_="form-control") }}
                       <small class="text-muted form-text">Label that you want link to this device</small>
