add placeholder log in form

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -148,6 +148,15 @@
       </a>
     </li>
 
+    <li class="nav-heading">Placeholders</li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.placeholder_logs') }}">
+        <i class="bi-menu-button-wide"></i>
+        <span>Uploaded Placeholders</span>
+      </a>
+    </li>
+
     <li class="nav-heading">Devices</li>
 
     <li class="nav-item">
