--- a/ereuse_devicehub/templates/labels/print_labels.html
+++ b/ereuse_devicehub/templates/labels/print_labels.html
@@ -39,12 +39,30 @@
                               <b class="tag" data-serial-number="{{ dev.serial_number or '' }}"
                                   data-manufacturer="{{ dev.manufacturer or '' }}"
                                   data-model="{{ dev.model or '' }}"
+                                  data-tags="{{ dev.list_tags() }}"
+                                  data-phid="{{ dev.phid() }}"
                                   data-sid="{{ dev.sid or '' }}">{{ dev.devicehub_id }}</b>
                           </div>
                         </div>
-                        <div class="col sid" style="display: none">
+                      </div>
+                      <div class="row phid" style="display: none">
+                        <div class="col">
+                          <div>
+                              <b>{{ dev.phid() }}</b>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row sid" style="display: none">
+                        <div class="col">
                           <div>
                               <b>{{ dev.sid or '' }}</b>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row tags" style="display: none">
+                        <div class="col">
+                          <div>
+                              <b>{{ dev.list_tags() }}</b>
                           </div>
                         </div>
                       </div>
@@ -126,8 +144,16 @@
                       <label class="form-check-label" for="dhidCheck">Dhid</label>
                     </div>
                     <div class="form-switch">
+                      <input class="form-check-input" name="phid" type="checkbox" id="phidCheck">
+                      <label class="form-check-label" for="phidCheck">Phid</label>
+                    </div>
+                    <div class="form-switch">
                       <input class="form-check-input" name="sid" type="checkbox" id="sidCheck">
                       <label class="form-check-label" for="sidCheck">Sid</label>
+                    </div>
+                    <div class="form-switch">
+                      <input class="form-check-input" name="tags" type="checkbox" id="tagsCheck">
+                      <label class="form-check-label" for="tagsCheck">Tags</label>
                     </div>
                     <div class="form-switch">
                       <input class="form-check-input" name="serial_number" type="checkbox" id="serialNumberCheck">
