--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -62,10 +62,16 @@
               <button class="nav-link" data-bs-toggle="tab" data-bs-target="#components">Components</button>
             </li>
 
+           {% if device.binding %}
+            <li class="nav-item">
+              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#binding">Binding</button>
+            </li>
+            {% endif %}
+
           </ul>
           <div class="tab-content pt-2">
 
-            <div class="tab-pane fade show active" id="type">
+            <div class="tab-pane fade {% if active_binding %}profile-overview{% else %}show active{% endif %}" id="type">
               <h5 class="card-title">Details</h5>
               {% if device.placeholder %}(<a href="{{ url_for('inventory.device_edit', id=device.devicehub_id)}}">edit</a>){% endif %}
 
@@ -216,6 +222,42 @@
                 {% endfor %}
               </div>
             </div>
+            {% if placeholder.binding %}
+            <div class="tab-pane fade {% if active_binding %}show active{% else %}profile-overview{% endif %}" id="binding">
+              <h5 class="card-title">Binding</h5>
+              <div class="list-group col-6">
+                <p>
+                  Be careful, binding implies changes in the data of a device that affect its
+                  traceability.
+                </p>
+              </div>
+              <div class="list-group col-6">
+                  <form action="{{ url_for('inventory.device_details', id=placeholder.binding.devicehub_id) }}" method="post">
+                  {{ form_binding.csrf_token }}
+                  {% for field in form_binding %}
+                  {% if field != form_binding.csrf_token %}
+
+                  <div class="col-12">
+                      {{ field.label(class_="form-label") }}:
+                      {{ field }}
+                      {% if field.errors %}
+                      <p class="text-danger">
+                        {% for error in field.errors %}
+                          {{ error }}<br/>
+                        {% endfor %}
+                      </p>
+                      {% endif %}
+                  </div>
+
+                  {% endif %}
+                  {% endfor %}
+                  <div class="col-12 mt-2">
+                      <input type="submit" class="btn btn-primary" value="Search" />
+                  </div>
+                  </form>
+              </div>
+            </div>
+            {% endif %}
 
         </div>
       </div>
