--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -401,6 +401,8 @@
                       <th scope="col">Select</th>
                       <th scope="col">Title</th>
                       <th scope="col">DHID</th>
+                      <th scope="col">PHID</th>
+                      <th scope="col">Is Abstract</th>
                       <th scope="col">Unique Identifiers</th>
                       <th scope="col">Lifecycle Status</th>
                       <th scope="col">Allocated Status</th>
@@ -441,6 +443,12 @@
                         <a href="{{ url_for('inventory.device_details', id=dev.devicehub_id)}}">
                           {{ dev.devicehub_id }}
                         </a>
+                      </td>
+                      <td>
+                          {{ dev.binding and dev.binding.phid or dev.placeholder and dev.placeholder.phid  or '' }}
+                      </td>
+                      <td>
+                          {{ dev.binding and dev.binding.is_abstract and '✓' or dev.placeholder and dev.placeholder.is_abstract and '✓' or '' }}
                       </td>
                       <td>
                         {% for t in dev.tags | sort(attribute="id") %}
