new hello settings

--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -19,7 +19,7 @@
 
           <div class="pt-6 pb-2">
             <h5 class="card-title text-center pb-0 fs-4">Download your settings for Workbench</h5>
-            <p class="text-center small">Please select one of this options</p>
+            {% if not demo %}
             <div class="row pt-3">
               <div class="col-5">
                 <a href="{{ url_for('workbench.settings') }}?opt=register" class="btn btn-primary">Register devices</a>
@@ -34,13 +34,27 @@
                 <a href="/static/iso/{{ iso }}" class="btn btn-primary">{{ iso }}</a>
               </div>
               <div class="col">
-                <p class="small">Download ISO workbench and burn it one one usb stick.</p>
                 <p class="small">
-                  Download Checksum: <a style="color: #993365;" href="/static/iso/SHA512SUMS">SHA512SUMS</a> |
-                  <a style="color: #993365;" href="/static/iso/SHA512SUMS.sign">Signature</a>
+                  Download Checksum: <a style="color: #993365;" href="/static/iso/SHA512SUMS">SHA512SUMS</a>
                 </p>
               </div>
             </div>
+            {% endif %}
+
+            {% else %}
+
+            {% if iso %}
+            <div class="row pt-3">
+              <div class="col-5">
+                <a href="/static/iso/demo/{{ iso }}" class="btn btn-primary">{{ iso }}</a>
+              </div>
+              <div class="col">
+                <p class="small">
+                  Download Checksum: <a style="color: #993365;" href="/static/iso/demo/SHA512SUMS">SHA512SUMS</a>
+                </p>
+              </div>
+            </div>
+            {% endif %}
             {% endif %}
           </div>
 
