--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -402,7 +402,7 @@
                       <th scope="col">Title</th>
                       <th scope="col">DHID</th>
                       <th scope="col">PHID</th>
-                      <th scope="col">Is Abstract</th>
+                      <th scope="col">Type</th>
                       <th scope="col">Unique Identifiers</th>
                       <th scope="col">Lifecycle Status</th>
                       <th scope="col">Allocated Status</th>
