--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -62,13 +62,13 @@
               <button class="nav-link" data-bs-toggle="tab" data-bs-target="#components">Components</button>
             </li>
 
-           {% if device.binding %}
+           {% if device.is_abstract() == 'Abstract' %}
             <li class="nav-item">
               <button class="nav-link" data-bs-toggle="tab" data-bs-target="#binding">Binding</button>
             </li>
             {% endif %}
 
-           {% if device.placeholder and placeholder.binding and device.is_abstract() != 'Abstract'%}
+           {% if device.is_abstract() == 'Twin' %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('inventory.unbinding', phid=placeholder.phid) }}">Unbinding</a>
             </li>
@@ -102,17 +102,17 @@
 
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Manufacturer</div>
-                <div class="col-lg-9 col-md-8">{{ device.manufacturer }}</div>
+                <div class="col-lg-9 col-md-8">{{ device.manufacturer or ''}}</div>
               </div>
 
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Model</div>
-                <div class="col-lg-9 col-md-8">{{ device.model }}</div>
+                <div class="col-lg-9 col-md-8">{{ device.model or ''}}</div>
               </div>
 
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Serial Number</div>
-                <div class="col-lg-9 col-md-8">{{ device.serial_number }}</div>
+                <div class="col-lg-9 col-md-8">{{ device.serial_number or ''}}</div>
               </div>
             </div>
 
@@ -222,6 +222,7 @@
 
             <div class="tab-pane fade profile-overview" id="components">
               <h5 class="card-title">Components Details</h5>
+              {% if device.binding %}
               <div class="list-group col-6">
                 {% for component in device.components|sort(attribute='type') %}
                 <div class="list-group-item">
@@ -241,8 +242,13 @@
                 </div>
                 {% endfor %}
               </div>
+              {% else %}
+              <div class="col-6">
+                  {{ device.placeholder.components or '' }}
+              </div>
+              {% endif %}
             </div>
-            {% if placeholder.binding %}
+            {% if device.is_abstract() %}
             <div class="tab-pane fade {% if active_binding %}show active{% else %}profile-overview{% endif %}" id="binding">
               <h5 class="card-title">Binding</h5>
               <div class="list-group col-6">
@@ -252,7 +258,7 @@
                 </p>
               </div>
               <div class="list-group col-6">
-                  <form action="{{ url_for('inventory.device_details', id=placeholder.binding.devicehub_id) }}" method="post">
+                  <form action="{{ url_for('inventory.device_details', id=device.devicehub_id) }}" method="post">
                   {{ form_binding.csrf_token }}
                   {% for field in form_binding %}
                   {% if field != form_binding.csrf_token %}
