put the old dhid in the new placeholder device

--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -34,7 +34,7 @@
 
             {% if placeholder.binding %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('inventory.device_details', id=placeholder.binding.devicehub_id) }}">Workbench device</a>
+              <a class="nav-link" href="{# url_for('inventory.device_details', id=placeholder.binding.devicehub_id) #}">Workbench device</a>
             </li>
             {% endif %}
 
